--- a/medium-service/src/main/resources/templates/signUpPage.html
+++ b/medium-service/src/main/resources/templates/signUpPage.html
@@ -26,10 +26,10 @@
          <input type="text" th:field="*{email}" />
          <br/>
          Password:
-         <input type="text" th:field="*{password}" />
+         <input type="password" th:field="*{password}" />
          <br/>
          Password again:
-         <input type="text" th:field="*{passwordAgain}" />
+         <input type="password" th:field="*{passwordAgain}" />
          <br/>
          <input type="submit" value="Create a new account" />
       </form>
